# tinyram-toolchain

./: flake.nix  run-cabal-test.sh  run-csmith-tests.sh  run-tests.sh
architecture/: default.nix  flake-module.nix  flake.nix
architecture/src/: uplc2c-architecture.tex
compiler/: flake-module.nix  flake.nix  uplc2c.cabal
compiler/codegen-exe/: Main.hs
compiler/src/UPLC2C/: Command.hs  Compile.hs  CompileFunctionDefinition.hs  Serialization.hs  TermToCProgram.hs
compiler/src/UPLC2C/Types/: CFunctionDefinition.hs
compiler/test/: DataGenerator.hs  Env.hs  ExprGenerator.hs  Generator.hs  Main.hs  Model.hs  SCApplicationTest.hs  SerializationTest.hs  ShowInstances.hs  ToUPLC.hs  UPLC2CTest.hs  Util.hs
nix/flake-modules/haskell.nix/: flake-module.nix
rts/: CMakeLists.txt  FinishBuilding.cmake  compile_commands.json  finish-building.sh  mini-gmp.c  print.cpp  rts.c  rts.h  tinyRAM.cmake  tinyRAM.ld
rts/bootstrap/: CMakeLists.txt  builtins.c  const_init.S  memcpy.c  preamble.S  preamble.h  special.c  special.h  start.c
rts/bytestring/: builtin_index_bytestring.c  builtin_less_bytestring.c  builtin_slice_bytestring.c
rts/csmith-testcases/: CMakeLists.txt
rts/csmith-testcases/csmith/: CMakeLists.txt  csmith.h  safe_math_macros.h  stdint.h
rts/csmith-testcases/csmith/TinyRAM/: runtime.h
rts/csmith-testcases/csmith/X86/: runtime.h
rts/csmith-testcases/testcases_tier1/: CMakeLists.txt  csmith_tier1_test_1.c  csmith_tier1_test_10.c  csmith_tier1_test_11.c  csmith_tier1_test_12.c  csmith_tier1_test_13.c  csmith_tier1_test_14.c  csmith_tier1_test_15.c  csmith_tier1_test_16.c  csmith_tier1_test_17.c  csmith_tier1_test_3.c  csmith_tier1_test_4.c  csmith_tier1_test_6.c  csmith_tier1_test_7.c  csmith_tier1_test_8.c  tier1_ctest2.c  tier1_ctest5.c
rts/csmith-testcases/testcases_tier2/: CMakeLists.txt  csmith_tier2_test_1.c  csmith_tier2_test_2.c  csmith_tier2_test_3.c  csmith_tier2_test_5.c  csmith_tier2_test_6.c  tier2_ctest4.c
rts/data/: builtin_bdata.c  builtin_constr_data.c  builtin_equals_data.c  builtin_idata.c  builtin_list_data.c  builtin_mk_nil_data.c  builtin_mk_nil_pair_data.c  builtin_mk_pair_data.c  builtin_un_idata.c  builtin_un_map_data.c
rts/gmp/: CMakeLists.txt  mini-gmp.c
rts/integer/: builtin_divide_integer.c  builtin_leq_integer.c  builtin_less_integer.c  builtin_quotient_integer.c  builtin_subtract_integer.c
rts/list/: builtin_choose_list.c  builtin_mk_cons.c  builtin_null_list.c
rts/misc/: builtin_choose_unit.c  builtin_error.c  builtin_if_then_else.c  builtin_trace.c
rts/pair/: builtin_fst_pair.c  builtin_snd_pair.c
rts/rts/: CMakeLists.txt  apply_script_args.c  deserialize_data.c  print.c  print.cpp  rts.c  rts.h
rts/rts/arch/TinyRAM/: input_tapes.c  print.cpp  putC.S
rts/rts/arch/x86/: input_tapes.cpp  print.cpp  putC.c  util.cpp  util.h
rts/rts/bytestring/: builtin_append_bytestring.c  builtin_cons_bytestring.c  builtin_equals_bytestring.c  builtin_index_bytestring.c  builtin_length_bytestring.c  builtin_ord_bytestring.c
rts/rts/data/: builtin_bdata.c  builtin_choose_data.c  builtin_equals_data.c  builtin_idata.c  builtin_list_data.c  builtin_map_data.c  builtin_mk_nil_data.c  builtin_mk_nil_pair_data.c  builtin_mk_pair_data.c  builtin_un_bdata.c  builtin_un_constr_data.c  builtin_un_idata.c  builtin_un_list_data.c  builtin_un_map_data.c
rts/rts/integer/: builtin_add_integer.c  builtin_divide_integer.c  builtin_equals_integer.c  builtin_leq_integer.c  builtin_mod_integer.c  builtin_multiply_integer.c  builtin_quotient_integer.c  builtin_remainder_integer.c  builtin_subtract_integer.c
rts/rts/list/: builtin_choose_list.c  builtin_head_list.c  builtin_mk_cons.c  builtin_null_list.c  builtin_tail_list.c
rts/rts/misc/: builtin_choose_unit.c  builtin_error.c  builtin_trace.c
rts/rts/pair/: builtin_fst_pair.c
rts/rts/string/: builtin_append_string.c  builtin_decode_utf8.c  builtin_encode_utf8.c  builtin_equals_string.c
rts/string/: builtin_decode_utf8.c  builtin_encode_utf8.c  builtin_equals_string.c
rts/testcases/: CMakeLists.txt  finish-building.sh  test12.plc  test13.plc  test14.plc  test15.plc  test18.plc  test2.plc  test20.plc  test21.plc  test23.plc  test24_1.plc  test24_2.plc  test25_1.plc  test4.plc  test6.plc
rts/tinyRAM_include/: assert.h  ctype.h  limits.h  stddef.h  stdint.h  stdlib.h  string.h
rts/uplc-testcases/: CMakeLists.txt  compile_testcase.sh  test10.plc  test11.plc  test16.plc  test19.plc  test25_2.plc  test_standalone_17.plc  test_standalone_22.plc  test_validator_1.plc  test_validator_2.plc  test_validator_3.plc
