cabal-version:      2.4
name:               uplc2c
version:            0.1.0.0
license: NONE
license-files: LICENSE
author:        Ardana Labs
maintainer:    morgan.thomas@platonic.systems


library
  exposed-modules:
    UPLC2C.Command
    UPLC2C.Compile
    UPLC2C.CompileFunctionDefinition
    UPLC2C.Prelude
    UPLC2C.Serialization
    UPLC2C.TermToCProgram
    UPLC2C.Types.CCode
    UPLC2C.Types.CName
    UPLC2C.Types.CFunctionDefinition
    UPLC2C.Types.CProgram
    UPLC2C.Types.CProgramBuilder
    UPLC2C.Types.CProgramBuilderT
    UPLC2C.Types.DeBruijnIndex
    UPLC2C.Types.InputFilePath
    UPLC2C.Types.OutputFilePath
    UPLC2C.Types.UPLCTerm

  build-depends:
    base >= 4.9 && < 5,
    aeson,
    bytestring,
    containers,
    either,
    extra,
    generic-lens,
    ghc-prim,
    hedgehog -any,
    lens,
    optparse-applicative,
    plutus-core,
    plutus-ledger-api,
    raw-strings-qq,
    serialise,
    string-random,
    text -any,
    transformers,
    mtl

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists

executable codegen
  main-is: Main.hs

  build-depends:
    base >= 4.9 && < 5,
    bytestring,
    ghc-prim,
    text -any,
    mtl,
    elf == 0.30,
    raw-strings-qq,
    optparse-applicative,
    regex-tdfa,

  hs-source-dirs: codegen-exe
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists

executable uplc2c
  main-is: Main.hs

  build-depends:
    base >= 4.9 && < 5,
    aeson,
    bytestring,
    containers,
    either,
    extra,
    generic-lens,
    ghc-prim,
    hedgehog -any,
    lens,
    text -any,
    mtl,

    uplc2c

  hs-source-dirs: exe
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists


test-suite uplc2c-test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  exposed-modules: Test
  other-modules:   Generator Model ToUPLC SerializationTest ShowInstances

  hs-source-dirs: test
  ghc-options:
  build-depends:
    base >= 4.9 && < 5,
    hedgehog -any,
    QuickCheck,
    hedgehog-quickcheck,
    quickcheck-transformer,
    quickcheck-instances,
    transformers,
    plutus-core,
    uplc2c,
    bytestring,
    text,
    mmorph,
    temporary,
    process,
    raw-strings-qq,
    process-extras,
    directory,
    lens
